--- a/lib/metric_fu/reporting/templates/awesome/index.html.erb
+++ b/lib/metric_fu/reporting/templates/awesome/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Metric Fu Results</h3>
+<h3>Metric Fu Results</h3><%= gpa_score %>
 <ul id='projects'>
 <% metric_links.each do |link| %>
   <li class='even failure'>
